# ClaimLens

./: .dockerignore  .env.example  .gitignore  AUDIT.md  Dockerfile  README.md  ROADMAP.md  audit_before_online_deployement.md  pyproject.toml
.github/workflows/: ci.yml
config/: channels.example.toml  claimlens.example.toml
docs/: deployment-paulmondou-infra.md
logics/: INDEX.md  instructions.md
logics/architecture/: adr_001_single_video_local_first_pipeline.md  adr_002_advanced_source_verification_architecture.md
logics/backlog/: item_001_create_python_package_and_cli_shell.md  item_002_implement_configuration_loading.md  item_003_create_sqlite_schema_and_init_db_command.md  item_004_add_baseline_test_and_quality_tooling.md  item_005_load_channel_configuration_for_ingestion.md  item_006_create_bounded_youtube_metadata_client.md  item_007_persist_ingested_channels_and_videos.md  item_008_implement_ingest_and_candidates_cli_commands.md  item_009_add_ingestion_tests_and_documentation.md  item_010_close_sqlite_connections_deterministically.md  item_011_harden_configuration_loading_contract.md  item_012_add_minimal_ci_quality_gate.md  item_013_document_schema_migration_policy.md  item_014_implement_single_video_run_model_and_url_input.md  item_015_make_subtitle_extraction_mandatory_and_add_transcript_cleanup.md  item_016_add_openai_llm_analysis_for_cleaned_transcripts.md  (+57 more)
src/claimlens/: __init__.py  auth.py  (+12 more)
tests/: test_analysis_briefs_web.py  test_auth_api_keys.py  test_cli.py  test_config.py  test_db.py  test_pipeline.py  test_verification.py  test_youtube.py
(+61 files in other folders)
