[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claimlens"
version = "0.1.0"
description = "Turn selected YouTube videos into sourced, claim-aware briefs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ClaimLens contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
claimlens = "claimlens.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
